<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.dan.danmusicapp.SearchActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/padding_app">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/search_text"
            android:textSize="@dimen/text_sz_large" />

        <Button
            android:id="@+id/button_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/more_info" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal">

            <Button
                android:id="@+id/search_to_main"
                style="@style/NavigationButtonStyle"
                android:layout_weight="1"
                android:text="@string/home" />

            <Button
                style="@style/NoneNavigationButtonStyle"
                android:layout_weight="1"
                android:text="@string/search" />

            <Button
                android:id="@+id/search_to_playing"
                style="@style/NavigationButtonStyle"
                android:layout_weight="1"
                android:text="@string/now_playing" />

            <Button
                android:id="@+id/search_to_payment"
                style="@style/NavigationButtonStyle"
                android:layout_weight="1"
                android:text="@string/payment" />
        </LinearLayout>
    </LinearLayout>
</layout>
