<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.dan.danmusicapp.ArtistsActivity">
        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="0dp">
        </ScrollView>

        <LinearLayout
            android:layout_weight="0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/buttonArtistsActivityHome"
                style="@style/NavigationButtonStyle"
                android:layout_weight="1"
                android:text="@string/home"/>
            <Button
                android:id="@+id/buttonArtistsActivitySearch"
                style="@style/NavigationButtonStyle"
                android:layout_weight="1"
                android:text="@string/search"/>
            <Button
                android:id="@+id/buttonArtistsActivityNowPlaying"
                style="@style/NavigationButtonStyle"
                android:layout_weight="1"
                android:text="@string/now_playing"/>
            <Button
                android:id="@+id/buttonArtistsActivityMyMusic"
                style="@style/NavigationButtonStyle"
                android:layout_weight="1"
                android:text="@string/my_music"/>
        </LinearLayout>

    </LinearLayout>
</layout>