<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.dan.danmusicapp.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/padding_app">

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/image_home_activity" />
        </ScrollView>

        <LinearLayout
            android:layout_weight="0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                style="@style/NoneNavigationButtonStyle"
                android:layout_weight="1"
                android:text="@string/home"/>
            <Button
                android:id="@+id/buttonMainActivitySearch"
                style="@style/NavigationButtonStyle"
                android:layout_weight="1"
                android:text="@string/search"/>
            <Button
                android:id="@+id/buttonMainActivityNowPlaying"
                style="@style/NavigationButtonStyle"
                android:layout_weight="1"
                android:text="@string/now_playing"/>
            <Button
                android:id="@+id/buttonMainActivityMyMusic"
                style="@style/NavigationButtonStyle"
                android:layout_weight="1"
                android:text="@string/my_music"/>
        </LinearLayout>
    </LinearLayout>
</layout>